# backend

./: .dockerignore  .env.development  .env.production  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  docker-compose.yaml  nest-cli.json  package.json  pnpm-lock.yaml  process.json  tsconfig.json  update-api.sh
apps/qa_worker/: .gitignore  base_api_README.md  graph_api_README.md  pyproject.toml  update-api.sh
apps/qa_worker/.openapi-generator/: FILES
apps/qa_worker/base_api/: __init__.py  configuration.py  rest.py
apps/qa_worker/base_api/api/: __init__.py  chara_api.py  default_api.py  event_api.py  file_api.py  project_api.py  scene_api.py  worldview_api.py
apps/qa_worker/base_api/docs/: CharaApi.md  CharaEntity.md  CreateCharaDto.md  CreateProjectDto.md  CreateTodoDto.md  CreateWorldviewDto.md  DefaultApi.md  EntityOption.md  EventApi.md  EventContentEntity.md  EventEntity.md  EventTodoEntity.md  ProjectApi.md  SceneApi.md  SceneEntity.md  UpdateContentDto.md  UpdateProjectDto.md  WorldviewApi.md
apps/qa_worker/base_api/models/: __init__.py  create_chara_dto.py  create_project_dto.py  entity_option.py  event_content_entity.py  event_entity.py  project_entity.py  remove_file_dto.py  scene_entity.py  settings_entity.py  update_event_dto.py  update_todo_dto.py
apps/qa_worker/base_api/test/: test_chara_entity.py  test_create_project_dto.py  test_create_scene_dto.py  (+16 more)
apps/qa_worker/graph_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
apps/qa_worker/tests/: __init__.py
apps/qa_worker/worker/: constant.py  main.py
(+346 files in other folders)
